# magic-packet

./: Cargo.toml  LICENSE  README.md
src/: arping.rs  lib.rs  magic.rs  main.rs
